dded package fastapi multipart

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,7 @@ pydantic==2.10.4
 pydantic_core==2.27.2
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pytz==2024.2
 RapidFuzz==3.11.0
 requests==2.32.3
